--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "audio",
     "visualization"
   ],
-  "author": "1450941858@qq.com",
+  "types": "./index.d.ts",
+  "author": "bucai",
   "license": "ISC"
 }
