d.ts 和 独立命名空间

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "audio",
     "visualization"
   ],
-  "types": "./index.d.ts",
+  "typings":"types/index.d.ts",
   "author": "bucai",
   "license": "ISC"
 }
