--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "audio-visualization",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "音乐可视化",
   "main": "index.js",
   "scripts": {
-    "test": "echo name"
+    "build": "gulp build"
   },
   "repository": {
     "type": "git",
@@ -14,7 +14,20 @@
     "audio",
     "visualization"
   ],
-  "typings":"types/index.d.ts",
+  "typings": "types/index.d.ts",
   "author": "bucai",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.15",
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-uglify": "^3.0.2",
+    "webpack-stream": "^6.1.2"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.13.10"
+  }
 }
